# GCrisp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PLANNING.md  README.md  build.sh  configure.sh  debug.sh  imgui.ini  makefile  release.sh  setup.bat
assets/shaders/: Texture.glsl  TextureBatchSlots.glsl  image.glsl
include/GCrisp/: core.h
lib/: CMakeLists.txt
lib/GLAD/: CMakeLists.txt
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/Glad/: CMakeLists.txt  premake5.lua
lib/Glad/include/glad/: glad.h
lib/stb_impl/: CMakeLists.txt
platform/: CMakeLists.txt
platform/Desktop/: CMakeLists.txt
platform/Desktop/Commons/: CMakeLists.txt  DesktopInput.cpp
platform/Desktop/Commons/GCrisp/Platform/: DesktopInput.cpp
platform/Desktop/Commons/GCrisp/Platform/OpenGL/: GGLAPI.cpp  GGLAPI.h  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLCreator.cpp  GLCreator.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLWindow.cpp  GLWindow.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCamera.cpp  OpenGLCamera.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCreator.cpp  OpenGLCreator.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
platform/Desktop/Commons/GCrisp/Platform/Vulkan/: VKContext.cpp  VKContext.h  VKCreator.h  VKUtils.h  VKWindow.cpp  VKWindow.h  VulkanWindow.h
platform/Desktop/Commons/OpenGL/: CMakeLists.txt  OpenGLContext.cpp  OpenGLContext.h  OpenGLWindow.cpp  OpenGLWindow.h
platform/Desktop/Commons/OpenGL/GCrisp/Platform/OpenGL/: GGLAPI.cpp  GLContext.cpp  GLShader.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLWindow.cpp
platform/Desktop/Commons/OpenGL/Vane/Platform/OpenGL/: GGLAPI.cpp  GGLAPI.h  GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLWindow.cpp  GLWindow.h
platform/Desktop/Commons/Vane/Platform/: DesktopInput.cpp
platform/Desktop/Commons/Vulkan/: VulkanWindow.h
platform/Desktop/Commons/Vulkan/GCrisp/Platform/Vulkan/: VKContext.h  VKUtils.h
platform/Desktop/Commons/Vulkan/Vane/Platform/Vulkan/: VKContext.cpp  VKContext.h  VKCreator.h  VKUtils.h  VKWindow.cpp  VKWindow.h
platform/Desktop/Linux/: CMakeLists.txt  LinuxWindowCreator.cpp
platform/Desktop/Linux/GCrisp/Platform/: LinuxWindowCreator.cpp
platform/Desktop/Linux/GCrisp/Platform/Core/: LinuxPlatformUtils.cpp
platform/Desktop/Linux/Vane/Platform/: LinuxWindowCreator.cpp
platform/Desktop/OpenGL/: OpenGLWindow.h
platform/Desktop/Win32/: Win32WindowCreator.h
platform/Desktop/Win32/GCrisp/Platform/: Win32WindowCreator.cpp  Win32WindowCreator.h
platform/Desktop/Win32/GCrisp/Platform/Core/: Win32PlatformUtils.cpp  Win32Timer.h
platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
platform/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.h
resources/shaders/: font-frag.glsl  font-vert.glsl
src/: CMakeLists.txt  application.cpp  constants.c3  core.c  core.c3  core.cpp  core.h  engine.c3  gcpch.h  gcrisp.c3  logger.c3  parser.c3  script.c3
src/GCrisp/: Application.cpp  Application.h  Core.h  Entry.h  GCrisp.h  GWindow.cpp  GWindow.h  Gcrisp.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  application.h  core.h  entry.h  gcrisp.h  log.cpp  log.h
src/GCrisp/Assets/: Assets.h  AssetsManager.cpp  AssetsManager.h  GraphicsAsset.h
src/GCrisp/Core/: Application.cpp  Application.h  AssetsManager.cpp  AssetsManager.h  CameraController.cpp  CameraController.h  Core.cpp  Core.h  Entry.h  GWindow.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  PlatformUtils.h  Timer.cpp  Timer.h  Timing.cpp  Timing.h  UUID.cpp  UUID.h  Window.cpp
src/GCrisp/Core/Memory/: Allocable.h  Allocator.cpp  Allocator.h  Statistics.h
src/GCrisp/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/GCrisp/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/GCrisp/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Context.cpp  Context.h  Creator.h  GraphicsConstants.h  GraphicsContext.h  GraphicsCore.h  OrthoCamera.cpp  OrthoCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  Utils.h  VertexArray.cpp  VertexArray.h
src/Vane/: Entry.h  Vane.h
src/Vane/Assets/: Assets.h  AssetsManager.cpp  AssetsManager.h
src/Vane/Core/: Application.cpp  Application.h  Base.h  CameraController.cpp  CameraController.h  Core.cpp  Core.h  GWindow.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timing.cpp  Timing.h  UUID.cpp  UUID.h  Window.cpp
src/Vane/Core/Memory/: Allocable.h  Allocator.cpp  Allocator.h  Statistics.h
src/Vane/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Vane/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Context.cpp  Context.h  OrthoCamera.cpp  OrthoCamera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererBase.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  Utils.h  VertexArray.cpp  VertexArray.h
src/data/: pair.c3
src/script/: actions.c3  parser.c3  props.c3  script.c3
test/: CMakeLists.txt
test/src/: main.cpp
